--- a/style.css
+++ b/style.css
@@ -107,6 +107,36 @@ color: #ffff;
     top: 10px;
     left: 10px;
     color: #fff;
-   
-    
 }
+.fb img{
+    width: 20px;
+    height: 20px;
+  
+}
+.fb{
+    position:absolute;
+    bottom:10px;
+    left: 10px;
+    max-width: 150px;
+}
+.coppyRight{
+    background-color: #E67833;
+}
+body{
+    position: relative;
+}
+/* .onTop1{
+    display: none;
+     position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px; 
+} */
